--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ python = "^3.8"
 fastapi = "^0.70.0"
 uvicorn = "^0.15.0"
 python-dotenv = "^0.19.2"
-aiohttp = "^3.8.1"
+aiohttp = {extras = ["speedups"], version = "^3.8.1"}
 httpx = "^0.21.1"
 SQLAlchemy = "^1.4.27"
 
